CodeGeneration/target/AnotherCParser.py
# Generated from main/AnotherC/parser/AnotherC.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO



class AnotherCParser ( Parser ):

    grammarFileName = "AnotherC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'const'", "'while'", "'auto'", "'for'", 
                     "'do'", "'struct'", "'void'", "'bool'", "'int'", "'string'", 
                     "'char'", "'long'", "'float'", "'double'", "'if'", 
                     "'else'", "'return'", "'break'", "'continue'", "'true'", 
                     "'false'", "'this'", "'new'", "'='", "'=='", "'<'", 
                     "'>'", "'<='", "'>='", "'!='", "'+'", "'-'", "'*'", 
                     "'/'", "'%'", "'&&'", "'||'", "'++'", "'--'", "'+='", 
                     "'-='", "'*='", "'/='", "'%='", "'!'", "'->'", "'.'", 
                     "'?'", "';'", "':'", "'('", "')'", "'['", "']'", "'{'", 
                     "'}'", "','" ]

    symbolicNames = [ "<INVALID>", "CONST", "WHILE", "AUTO", "FOR", "DO", 
                      "STRUCT", "VOID", "BOOL", "INT", "STRING", "CHAR", 
                      "LONG", "FLOAT", "DOUBLE", "IF", "ELSE", "RETURN", 
                      "BREAK", "CONTINUE", "TRUE", "FALSE", "THIS", "NEW", 
                      "ASSIGN", "EQ", "LT", "GT", "LTE", "GTE", "NOT_EQ", 
                      "ADD", "SUB", "MUL", "DIV", "MOD", "AND", "OR", "INC", 
                      "DEC", "ADD_ASSIGN", "SUB_ASSIGN", "MUL_ASSIGN", "DIV_ASSIGN", 
                      "MOD_ASSIGN", "NEG", "ARROW", "DOT", "QM", "SEMI", 
                      "COLON", "LB", "RB", "LS", "RS", "LC", "RC", "COMMA", 
                      "ID", "INT_LIT", "DOUBLE_LIT", "FLOAT_LIT", "CHAR_LIT", 
                      "STR_LIT", "LINE_CMT", "BLOCK_CMT", "WS", "ERROR_CHAR", 
                      "UNCLOSED_STRING", "UNTERMINATED_COMMENT" ]

    RULE_array_literals = 0
    RULE_literals = 1
    RULE_program = 2
    RULE_decls = 3
    RULE_vardecl = 4
    RULE_var_decl_list = 5
    RULE_vartype = 6
    RULE_prim_type = 7
    RULE_array_type = 8
    RULE_funcdecl = 9
    RULE_functype = 10
    RULE_paralist = 11
    RULE_paradecl = 12
    RULE_block_func = 13
    RULE_stmts = 14
    RULE_struct_decl = 15
    RULE_attribute_list = 16
    RULE_no_assign_vardecl = 17
    RULE_constructor = 18
    RULE_struct_type = 19
    RULE_statement = 20
    RULE_if_stmt = 21
    RULE_for_stmt = 22
    RULE_single_vardecl = 23
    RULE_while_stmt = 24
    RULE_do_while_stmt = 25
    RULE_break_stmt = 26
    RULE_cont_stmt = 27
    RULE_return_stmt = 28
    RULE_assign_stmt = 29
    RULE_scalar_var = 30
    RULE_array_cell = 31
    RULE_member_access = 32
    RULE_call_func = 33
    RULE_expression_list = 34
    RULE_expression = 35
    RULE_if_expression = 36
    RULE_expression1 = 37
    RULE_expression2 = 38
    RULE_expression3 = 39
    RULE_expression4 = 40
    RULE_expression5 = 41
    RULE_expression6 = 42
    RULE_expression7 = 43
    RULE_expression8 = 44
    RULE_expression9 = 45
    RULE_operands = 46
    RULE_func_call = 47

    ruleNames =  [ "array_literals", "literals", "program", "decls", "vardecl", 
                   "var_decl_list", "vartype", "prim_type", "array_type", 
                   "funcdecl", "functype", "paralist", "paradecl", "block_func", 
                   "stmts", "struct_decl", "attribute_list", "no_assign_vardecl", 
                   "constructor", "struct_type", "statement", "if_stmt", 
                   "for_stmt", "single_vardecl", "while_stmt", "do_while_stmt", 
                   "break_stmt", "cont_stmt", "return_stmt", "assign_stmt", 
                   "scalar_var", "array_cell", "member_access", "call_func", 
                   "expression_list", "expression", "if_expression", "expression1", 
                   "expression2", "expression3", "expression4", "expression5", 
                   "expression6", "expression7", "expression8", "expression9", 
                   "operands", "func_call" ]

    EOF = Token.EOF
    CONST=1
    WHILE=2
    AUTO=3
    FOR=4
    DO=5
    STRUCT=6
    VOID=7
    BOOL=8
    INT=9
    STRING=10
    CHAR=11
    LONG=12
    FLOAT=13
    DOUBLE=14
    IF=15
    ELSE=16
    RETURN=17
    BREAK=18
    CONTINUE=19
    TRUE=20
    FALSE=21
    THIS=22
    NEW=23
    ASSIGN=24
    EQ=25
    LT=26
    GT=27
    LTE=28
    GTE=29
    NOT_EQ=30
    ADD=31
    SUB=32
    MUL=33
    DIV=34
    MOD=35
    AND=36
    OR=37
    INC=38
    DEC=39
    ADD_ASSIGN=40
    SUB_ASSIGN=41
    MUL_ASSIGN=42
    DIV_ASSIGN=43
    MOD_ASSIGN=44
    NEG=45
    ARROW=46
    DOT=47
    QM=48
    SEMI=49
    COLON=50
    LB=51
    RB=52
    LS=53
    RS=54
    LC=55
    RC=56
    COMMA=57
    ID=58
    INT_LIT=59
    DOUBLE_LIT=60
    FLOAT_LIT=61
    CHAR_LIT=62
    STR_LIT=63
    LINE_CMT=64
    BLOCK_CMT=65
    WS=66
    ERROR_CHAR=67
    UNCLOSED_STRING=68
    UNTERMINATED_COMMENT=69

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Array_literalsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LC(self):
            return self.getToken(AnotherCParser.LC, 0)

        def RC(self):
            return self.getToken(AnotherCParser.RC, 0)

        def expression_list(self):
            return self.getTypedRuleContext(AnotherCParser.Expression_listContext,0)


        def getRuleIndex(self):
            return AnotherCParser.RULE_array_literals

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray_literals" ):
                return visitor.visitArray_literals(self)
            else:
                return visitor.visitChildren(self)




    def array_literals(self):

        localctx = AnotherCParser.Array_literalsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_array_literals)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(AnotherCParser.LC)
            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << AnotherCParser.TRUE) | (1 << AnotherCParser.FALSE) | (1 << AnotherCParser.THIS) | (1 << AnotherCParser.NEW) | (1 << AnotherCParser.ADD) | (1 << AnotherCParser.SUB) | (1 << AnotherCParser.INC) | (1 << AnotherCParser.DEC) | (1 << AnotherCParser.NEG) | (1 << AnotherCParser.LB) | (1 << AnotherCParser.LC) | (1 << AnotherCParser.ID) | (1 << AnotherCParser.INT_LIT) | (1 << AnotherCParser.DOUBLE_LIT) | (1 << AnotherCParser.FLOAT_LIT) | (1 << AnotherCParser.CHAR_LIT) | (1 << AnotherCParser.STR_LIT))) != 0):
                self.state = 97
                self.expression_list()


            self.state = 100
            self.match(AnotherCParser.RC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiteralsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT_LIT(self):
            return self.getToken(AnotherCParser.INT_LIT, 0)

        def FLOAT_LIT(self):
            return self.getToken(AnotherCParser.FLOAT_LIT, 0)

        def DOUBLE_LIT(self):
            return self.getToken(AnotherCParser.DOUBLE_LIT, 0)

        def STR_LIT(self):
            return self.getToken(AnotherCParser.STR_LIT, 0)

        def CHAR_LIT(self):
            return self.getToken(AnotherCParser.CHAR_LIT, 0)

        def TRUE(self):
            return self.getToken(AnotherCParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(AnotherCParser.FALSE, 0)

        def array_literals(self):
            return self.getTypedRuleContext(AnotherCParser.Array_literalsContext,0)


        def getRuleIndex(self):
            return AnotherCParser.RULE_literals

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLiterals" ):
                return visitor.visitLiterals(self)
            else:
                return visitor.visitChildren(self)




    def literals(self):

        localctx = AnotherCParser.LiteralsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_literals)
        try:
            self.state = 110
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [AnotherCParser.INT_LIT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 102
                self.match(AnotherCParser.INT_LIT)
                pass
            elif token in [AnotherCParser.FLOAT_LIT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 103
                self.match(AnotherCParser.FLOAT_LIT)
                pass
            elif token in [AnotherCParser.DOUBLE_LIT]:
                self.enterOuterAlt(localctx, 3)
                self.state = 104
                self.match(AnotherCParser.DOUBLE_LIT)
                pass
            elif token in [AnotherCParser.STR_LIT]:
                self.enterOuterAlt(localctx, 4)
                self.state = 105
                self.match(AnotherCParser.STR_LIT)
                pass
            elif token in [AnotherCParser.CHAR_LIT]:
                self.enterOuterAlt(localctx, 5)
                self.state = 106
                self.match(AnotherCParser.CHAR_LIT)
                pass
            elif token in [AnotherCParser.TRUE]:
                self.enterOuterAlt(localctx, 6)
                self.state = 107
                self.match(AnotherCParser.TRUE)
                pass
            elif token in [AnotherCParser.FALSE]:
                self.enterOuterAlt(localctx, 7)
                self.state = 108
                self.match(AnotherCParser.FALSE)
                pass
            elif token in [AnotherCParser.LC]:
                self.enterOuterAlt(localctx, 8)
                self.state = 109
                self.array_literals()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(AnotherCParser.EOF, 0)

        def decls(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AnotherCParser.DeclsContext)
            else:
                return self.getTypedRuleContext(AnotherCParser.DeclsContext,i)


        def getRuleIndex(self):
            return AnotherCParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = AnotherCParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 112
                self.decls()
                self.state = 115 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << AnotherCParser.CONST) | (1 << AnotherCParser.AUTO) | (1 << AnotherCParser.STRUCT) | (1 << AnotherCParser.VOID) | (1 << AnotherCParser.BOOL) | (1 << AnotherCParser.INT) | (1 << AnotherCParser.STRING) | (1 << AnotherCParser.CHAR) | (1 << AnotherCParser.FLOAT) | (1 << AnotherCParser.DOUBLE))) != 0)):
                    break

            self.state = 117
            self.match(AnotherCParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self):
            return self.getTypedRuleContext(AnotherCParser.VardeclContext,0)


        def funcdecl(self):
            return self.getTypedRuleContext(AnotherCParser.FuncdeclContext,0)


        def struct_decl(self):
            return self.getTypedRuleContext(AnotherCParser.Struct_declContext,0)


        def getRuleIndex(self):
            return AnotherCParser.RULE_decls

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecls" ):
                return visitor.visitDecls(self)
            else:
                return visitor.visitChildren(self)




    def decls(self):

        localctx = AnotherCParser.DeclsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_decls)
        try:
            self.state = 122
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 119
                self.vardecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 120
                self.funcdecl()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 121
                self.struct_decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vartype(self):
            return self.getTypedRuleContext(AnotherCParser.VartypeContext,0)


        def var_decl_list(self):
            return self.getTypedRuleContext(AnotherCParser.Var_decl_listContext,0)


        def SEMI(self):
            return self.getToken(AnotherCParser.SEMI, 0)

        def CONST(self):
            return self.getToken(AnotherCParser.CONST, 0)

        def getRuleIndex(self):
            return AnotherCParser.RULE_vardecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardecl" ):
                return visitor.visitVardecl(self)
            else:
                return visitor.visitChildren(self)




    def vardecl(self):

        localctx = AnotherCParser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_vardecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==AnotherCParser.CONST:
                self.state = 124
                self.match(AnotherCParser.CONST)


            self.state = 127
            self.vartype()
            self.state = 128
            self.var_decl_list()
            self.state = 129
            self.match(AnotherCParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_decl_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(AnotherCParser.ID)
            else:
                return self.getToken(AnotherCParser.ID, i)

        def ASSIGN(self, i:int=None):
            if i is None:
                return self.getTokens(AnotherCParser.ASSIGN)
            else:
                return self.getToken(AnotherCParser.ASSIGN, i)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AnotherCParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(AnotherCParser.ExpressionContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(AnotherCParser.COMMA)
            else:
                return self.getToken(AnotherCParser.COMMA, i)

        def getRuleIndex(self):
            return AnotherCParser.RULE_var_decl_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_decl_list" ):
                return visitor.visitVar_decl_list(self)
            else:
                return visitor.visitChildren(self)




    def var_decl_list(self):

        localctx = AnotherCParser.Var_decl_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_var_decl_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(AnotherCParser.ID)
            self.state = 134
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==AnotherCParser.ASSIGN:
                self.state = 132
                self.match(AnotherCParser.ASSIGN)
                self.state = 133
                self.expression()


            self.state = 144
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==AnotherCParser.COMMA:
                self.state = 136
                self.match(AnotherCParser.COMMA)

                self.state = 137
                self.match(AnotherCParser.ID)
                self.state = 140
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==AnotherCParser.ASSIGN:
                    self.state = 138
                    self.match(AnotherCParser.ASSIGN)
                    self.state = 139
                    self.expression()


                self.state = 146
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VartypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def prim_type(self):
            return self.getTypedRuleContext(AnotherCParser.Prim_typeContext,0)


        def AUTO(self):
            return self.getToken(AnotherCParser.AUTO, 0)

        def array_type(self):
            return self.getTypedRuleContext(AnotherCParser.Array_typeContext,0)


        def struct_type(self):
            return self.getTypedRuleContext(AnotherCParser.Struct_typeContext,0)


        def getRuleIndex(self):
            return AnotherCParser.RULE_vartype

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVartype" ):
                return visitor.visitVartype(self)
            else:
                return visitor.visitChildren(self)




    def vartype(self):

        localctx = AnotherCParser.VartypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_vartype)
        try:
            self.state = 151
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 147
                self.prim_type()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 148
                self.match(AnotherCParser.AUTO)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 149
                self.array_type()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 150
                self.struct_type()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Prim_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(AnotherCParser.INT, 0)

        def FLOAT(self):
            return self.getToken(AnotherCParser.FLOAT, 0)

        def DOUBLE(self):
            return self.getToken(AnotherCParser.DOUBLE, 0)

        def STRING(self):
            return self.getToken(AnotherCParser.STRING, 0)

        def BOOL(self):
            return self.getToken(AnotherCParser.BOOL, 0)

        def CHAR(self):
            return self.getToken(AnotherCParser.CHAR, 0)

        def getRuleIndex(self):
            return AnotherCParser.RULE_prim_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrim_type" ):
                return visitor.visitPrim_type(self)
            else:
                return visitor.visitChildren(self)




    def prim_type(self):

        localctx = AnotherCParser.Prim_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_prim_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << AnotherCParser.BOOL) | (1 << AnotherCParser.INT) | (1 << AnotherCParser.STRING) | (1 << AnotherCParser.CHAR) | (1 << AnotherCParser.FLOAT) | (1 << AnotherCParser.DOUBLE))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def prim_type(self):
            return self.getTypedRuleContext(AnotherCParser.Prim_typeContext,0)


        def struct_type(self):
            return self.getTypedRuleContext(AnotherCParser.Struct_typeContext,0)


        def LS(self, i:int=None):
            if i is None:
                return self.getTokens(AnotherCParser.LS)
            else:
                return self.getToken(AnotherCParser.LS, i)

        def INT_LIT(self, i:int=None):
            if i is None:
                return self.getTokens(AnotherCParser.INT_LIT)
            else:
                return self.getToken(AnotherCParser.INT_LIT, i)

        def RS(self, i:int=None):
            if i is None:
                return self.getTokens(AnotherCParser.RS)
            else:
                return self.getToken(AnotherCParser.RS, i)

        def getRuleIndex(self):
            return AnotherCParser.RULE_array_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray_type" ):
                return visitor.visitArray_type(self)
            else:
                return visitor.visitChildren(self)




    def array_type(self):

        localctx = AnotherCParser.Array_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_array_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [AnotherCParser.BOOL, AnotherCParser.INT, AnotherCParser.STRING, AnotherCParser.CHAR, AnotherCParser.FLOAT, AnotherCParser.DOUBLE]:
                self.state = 155
                self.prim_type()
                pass
            elif token in [AnotherCParser.STRUCT]:
                self.state = 156
                self.struct_type()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 162 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 159
                self.match(AnotherCParser.LS)
                self.state = 160
                self.match(AnotherCParser.INT_LIT)
                self.state = 161
                self.match(AnotherCParser.RS)
                self.state = 164 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==AnotherCParser.LS):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functype(self):
            return self.getTypedRuleContext(AnotherCParser.FunctypeContext,0)


        def ID(self):
            return self.getToken(AnotherCParser.ID, 0)

        def LB(self):
            return self.getToken(AnotherCParser.LB, 0)

        def RB(self):
            return self.getToken(AnotherCParser.RB, 0)

        def SEMI(self):
            return self.getToken(AnotherCParser.SEMI, 0)

        def block_func(self):
            return self.getTypedRuleContext(AnotherCParser.Block_funcContext,0)


        def paralist(self):
            return self.getTypedRuleContext(AnotherCParser.ParalistContext,0)


        def getRuleIndex(self):
            return AnotherCParser.RULE_funcdecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncdecl" ):
                return visitor.visitFuncdecl(self)
            else:
                return visitor.visitChildren(self)




    def funcdecl(self):

        localctx = AnotherCParser.FuncdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_funcdecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 166
            self.functype()
            self.state = 167
            self.match(AnotherCParser.ID)

            self.state = 168
            self.match(AnotherCParser.LB)
            self.state = 170
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << AnotherCParser.AUTO) | (1 << AnotherCParser.STRUCT) | (1 << AnotherCParser.BOOL) | (1 << AnotherCParser.INT) | (1 << AnotherCParser.STRING) | (1 << AnotherCParser.CHAR) | (1 << AnotherCParser.FLOAT) | (1 << AnotherCParser.DOUBLE))) != 0):
                self.state = 169
                self.paralist()


            self.state = 172
            self.match(AnotherCParser.RB)
            self.state = 176
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [AnotherCParser.SEMI]:
                self.state = 174
                self.match(AnotherCParser.SEMI)
                pass
            elif token in [AnotherCParser.LC]:
                self.state = 175
                self.block_func()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctypeContext(ParserRuleContext):
        __slots__ = 'parser'

